--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,11 @@ jobs:
           aws s3 sync \
             build s3://jaejun.me --delete
 
-      # - name: Invalidation
-      #   run: |
-      #     aws cloudfront create-invalidation \
-      #       --distribution-id E1B3VT55F48OBM \
-      #       --paths / /index.html /error.html /manifest.json /favicon.ico
+      - name: Invalidation
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ES8BXJPB1KO2S \
+            --paths "/*"
