Add: blog-clean_architecture

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 jtree03:
   name: Jae Jun, Jo
-  title: Fullstack engineer
+  title: Software Engineer
   url: https://github.com/jtree03
   image_url: https://github.com/jtree03.png
