--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws cloudfront create-invalidation \
-            --distribution-id ES8BXJPB1KO2S \
+            --distribution-id ${{ secrets.AWS_CLOUDFRONT_ID }} \
             --paths "/*"
