--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,8 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws s3 sync \
-            build s3://jaejun.me --delete
+            build s3://jaejun.me --delete \
+            --region ap-northeast-2
 
       - name: Invalidation
         env:
@@ -42,4 +43,5 @@ jobs:
         run: |
           aws cloudfront create-invalidation \
             --distribution-id ${{ secrets.AWS_CLOUDFRONT_ID }} \
-            --paths "/*"
+            --paths "/*" \
+            --region ap-northeast-2
