--- a/package.json
+++ b/package.json
@@ -1,46 +1,41 @@
 {
-  "name": "blog-jaejun-me",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
-  },
-  "dependencies": {
-    "@docusaurus/core": "^2.2.0",
-    "@docusaurus/plugin-google-gtag": "^2.2.0",
-    "@docusaurus/preset-classic": "^2.2.0",
-    "@mdx-js/react": "^1.6.21",
-    "clsx": "^1.1.1",
-    "docusaurus-plugin-google-adsense": "^0.3.1",
-    "prism-react-renderer": "^1.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "styled-components": "^5.3.3"
-  },
-  "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.2.0",
-    "@tsconfig/docusaurus": "^1.0.6",
-    "typescript": "^4.5.2"
-  },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "blog-jaejun-me",
+	"version": "1.0.0",
+	"scripts": {
+		"docusaurus": "docusaurus",
+		"start": "docusaurus start",
+		"build": "docusaurus build",
+		"swizzle": "docusaurus swizzle",
+		"deploy": "docusaurus deploy",
+		"clear": "docusaurus clear",
+		"serve": "docusaurus serve",
+		"write-translations": "docusaurus write-translations",
+		"write-heading-ids": "docusaurus write-heading-ids",
+		"typecheck": "tsc"
+	},
+	"dependencies": {
+		"@docusaurus/core": "3.7.0",
+		"@docusaurus/plugin-google-gtag": "3.7.0",
+		"@docusaurus/preset-classic": "3.7.0",
+		"@docusaurus/module-type-aliases": "3.7.0",
+		"@mdx-js/react": "3.1.0",
+		"clsx": "2.1.1",
+		"prism-react-renderer": "2.4.1",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"styled-components": "6.1.17"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@tsconfig/docusaurus": "2.0.3",
+		"typescript": "5.8.3"
+	},
+	"browserslist": {
+		"production": [">0.5%", "not dead", "not op_mini all"],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
